# EDLine_parallel

./: .gitignore  CMakeLists.txt  README.md  setup.py  setup.sh
api/: app.py  readme.md
include/: edline_detector.h  ndarray_converter.h
test/: demo.py
